<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="zy_pay_account_update_tip">发现新版“卓易帐号插件”，是否立即更新？</string>
    <string name="app_name">卓易支付</string>
    <string name="action_settings">Settings</string>
    <string name="zy_pay_account_install_tip">需要安装“卓易账号插件”后才可用卓易账号进行登录，可保护您的账号安全只需安装一次，是否立即安装？</string>
    <string name="recharge">充值</string>
    <string name="recharge_100">充值100</string>
    <string name="user_center">用户模块</string>
    <string name="shopping">商城</string>
    <string name="others">其他</string>
    <string name="active_navigation">开启导航</string>
    <string name="freeze_navigation">关闭导航</string>
    <string name="orientation_land">横屏</string>
    <string name="orientation_portrait">竖屏</string>
    <string name="orientation_unspecified">无定义</string>
    <string name="purchase_goods">购买商品</string>
    <string name="login">充值</string>
    <string name="logout">登出</string>
    <string name="purchase_custom_goods">购买商品1</string>
    <string name="server_switch">服务器切换</string>
    <string name="zy_pay_dialog_title_text">卓易支付</string>
    <string name="zy_pay_content_good">商品 : </string>
    <string name="zy_pay_content_amount">应付E点 : </string>
    <string name="zy_pay_content_balance">剩余E点 : </string>
    <string name="zy_pay_content_amount_unit">E点</string>
    <string name="zy_query_account_balance_fail">发起支付请求失败，请稍后再试！</string>
    <string name="zy_recharge_pay">充值并支付</string>
    <string name="zy_confirm_pay">确认支付</string>
    <string name="zy_pay_success">成功支付</string>
    <string name="zy_pay_surplus_E">E点，您剩余的E点为</string>
    <string name="zy_pay_E">E点</string>
    <string name="hello_world">卓易网游插件悬浮窗</string>
    <string name="zy_float_window_name">卓易</string>
    <string name="zy_pay">充值</string>
    <string name="zy_person_center">个人中心</string>
    <string name="zy_activity">活动</string>
    <string name="zy_gift">礼包</string>
    <string name="zy_strategy">攻略</string>
    <string name="zy_loginout">登出</string>
	<string name="zy_pay_install_tip">安装提示</string>
	<string name="zy_pay_install">安装</string>
	<string name="zy_pay_account_bind_phone_tip">为了您的账号和财产安全，请绑定您的手机号</string>
	<string name="zy_pay_account_no_exit">账号不存在</string>
	<string name="zy_pay_account_login">卓易登陆</string>
	<string name="zy_pay_account_bind_phone">绑定手机号</string>
	<string name="zy_pay_account_welcome">用户%1$s欢迎你</string>
	<string name="request_gift">正在请求礼包，请稍后...</string>
	<string name="request_person_center">正在请求数据，请稍后...</string>
	<string name="request_pay">正在发起支付请求...</string>
	<string name="query_account_balance">正在查询余额...</string>
	<string name="paying">正在支付，请稍后...</string>
	<string name="request_recharge">正在请求充值，请稍后...</string>
	<string name="request_strategy">正在请求攻略，请稍后...</string>
	<string name="net_work_fail">请确认您的网络连接情况</string>
	<string name="zy_loginout_title">提示</string>
	<string name="zy_loginout_content">登出帐号游戏将退出，\n是否登录卓易帐号？</string>
	<string name="zy_loginout_cancel">取消</string>
	<string name="zy_loginout_out">登出</string>
	<string name="zy_charge_E">充值E点</string>
	<string name="zy_install_tip">提示</string>
    <string name="zy_install_pay_apk">请安装微信支付框架,保护您的支付环境安全</string>
    <string name="zy_update_pay_apk">请更新支付框架后,再进行支付</string>
    <string name="zy_install_wx_apk">您还未安装微信,需要安装微信客户端才能进行微信支付</string>
    <string name="zy_update_wx_apk">请更新微信客户端后,再进行支付</string>
    <string name="zy_download_and_install">下载并安装</string>
    <string name="zy_update">更新</string>
    <string name="zy_login_checking">登录验证中...</string>
    <string name="zy_vouchers">获得代金券一张</string>
    <string name="zy_vouchers_path">代金券在个人中心-我的代金券页面中</string>
    <string name="zy_vouchers_tip">记得在过期前使用哦~</string>
    <string name="zy_vouchers_entry">点击查看</string>
    <string name="lib_droi_account_app_name">卓易帐号</string>
    <string name="lib_droi_account_action_settings">Settings</string>
    <string name="lib_droi_account_hello_world">Hello world!</string>
    <string name="lib_droi_account_login_activity_username_label">Username</string>
    <string name="lib_droi_account_login_activity_password_label">Password</string>
    <string name="lib_droi_account_login_activity_ok_button">Sign in</string>
    <string name="lib_droi_account_freeme_acount">卓易帐号</string>
    <string name="lib_droi_account_ui_activity_authenticating">加载中...</string>
    <string name="lib_droi_account_tip_password_none">密码不能为空</string>
    <string name="lib_droi_account_tip_username_none">用户名不能为空</string>
    <string name="lib_droi_account_settings_action">我的帐号</string>
    <string name="lib_droi_account_settings_summary"></string>
    <string name="lib_droi_account_settings_activity_title">我的帐号</string>
    <string name="lib_droi_account_base_info_title">基本信息</string>
    <string name="lib_droi_account_user_account">帐号名称</string>
    <string name="lib_droi_account_user_account_name">账户</string>
    <string name="lib_droi_account_user_icon_update">编辑头像</string>
    <string name="lib_droi_account_user_gender">性别</string>
    <string name="lib_droi_account_user_nickname">昵称</string>
    <string name="lib_droi_account_user_bind_phonenumber">绑定手机</string>
    <string name="lib_droi_account_user_bind_email">绑定邮箱</string>
    <string name="lib_droi_account_user_security">安全设置</string>
    <string name="lib_droi_account_user_mofify_pwd">修改密码</string>
    <string name="lib_droi_account_user_exit_current_account">注销当前用户</string>
    <string name="lib_droi_account_user_delete_account">删除帐号</string>
    <string name="lib_droi_account_forget_code">忘记密码?</string>
    <string name="lib_droi_account_login">登录</string>
    <string name="lib_droi_account_register">注册</string>
    <string name="lib_droi_account_register_account">注册账号</string>
    <string name="lib_droi_account_title_activity_main">QQ帐号登录</string>
    <string name="lib_droi_account_title_activity_main_sina">新浪微博登录</string>
    <string name="lib_droi_account_login_name">帐号：</string>
    <string name="lib_droi_account_login_code">密码：</string>
    <string name="lib_droi_account_address">请选择地址：</string>
    <string name="lib_droi_account_global_btn_cancel">取消</string>
    <string name="lib_droi_account_global_btn_ok">确定</string>
    <string name="lib_droi_account_ok">确定</string>
    <string name="lib_droi_account_previous_step_text">上一步</string>
    <string name="lib_droi_account_next_step_text">下一步</string>
    <string name="lib_droi_account_finish">完成</string>
    <string name="lib_droi_account_hint_input_phonenumer">请输入手机号</string>
    <string name="lib_droi_account_hint_input_email">请输入邮箱地址</string>
    <string name="lib_droi_account_msg_error_phonenumer">请输入正确的手机号</string>
    <string name="lib_droi_account_msg_error_email">请输入正确的邮箱地址</string>
    <string name="lib_droi_account_msg_error_accountname">请输入正确的手机号码或邮箱地址</string>
    <string name="lib_droi_account_msg_error_password_rule">请输入正确格式的密码</string>
    <string name="lib_droi_account_msg_pwd_not_same">两次密码不一致</string>
    <string name="lib_droi_account_msg_on_process">正在处理，请稍后</string>
    <string name="lib_droi_account_tip_register_now">正在注册中，请稍候。</string>
    <string name="lib_droi_account_server_exception">连接服务器超时，请稍后再试</string>
    <string name="lib_droi_account_authenticate_login">正在授权认证登录</string>
    <string name="lib_droi_account_modify_pwd_error">设置密码错误，请重试</string>
    <string name="lib_droi_account_network_wrong_text">网络链接错误，请查看网络设置。</string>
    <string name="lib_droi_account_save_data_fail">保存数据失败</string>
    <string name="lib_droi_account_get_data_fail">获取数据失败</string>
    <string name="lib_droi_account_exit_account_hint">您将退出%1$s</string>
    <string name="lib_droi_account_no_account">用户不存在</string>
    <string name="lib_droi_account_account_already_exits">用户已存在</string>
    <string name="lib_droi_account_need_to_agree_plicy_contrat">请选择同意用户隐私条款</string>
    <string name="lib_droi_account_password_requires_letters">密码必须包含至少 1 个字母</string>
    <string name="lib_droi_account_register_title">帐号注册</string>
    <string name="lib_droi_account_register_account_hint">手机号码/邮箱（作为登录帐号）</string>
    <string name="lib_droi_account_register_account_email_hint">请输入邮箱</string>
	<string name="lib_droi_account_register_account_phone_hint">请输入手机号码</string>
    <string name="lib_droi_account_register_account_title">中国   +86</string>
    <string name="lib_droi_account_register_user_secrecy_agreement">我已阅读并同意</string>
    <string name="lib_droi_account_user_items_privacy_text">使用条款和隐私政策</string>
    <string name="lib_droi_account_tip_register_wrong">注册出错，请重试</string>
    <string name="lib_droi_account_has_been_added_account">已经添加了当前登录帐号</string>
    <string name="lib_droi_account_security_code_title">输入验证码</string>
    <string name="lib_droi_account_security_code_hint">请输入验证码</string>
    <string name="lib_droi_account_get_security_code_text">获取验证码</string>
    <string name="lib_droi_account_read_security_code_auto">本机自动读取验证码</string>
    <string name="lib_droi_account_retry_security_code">重新发送</string>
    <string name="lib_droi_account_security_code_empty">验证码为空</string>
    <string name="lib_droi_account_tip_code_wrong">验证码错误</string>
    <string name="lib_droi_account_login_account_hint">手机号码/邮箱</string>
    <string name="lib_droi_account_login_password_hint">请输入密码</string>
    <string name="lib_droi_account_login_account_title">帐号登录</string>
    <string name="lib_droi_account_login_qq_login">腾讯QQ登录</string>
    <string name="lib_droi_account_login_weixin_login">微信登录</string>
    <string name="lib_droi_account_login_weibo_login">新浪微博登录</string>
    <string name="lib_droi_account_create_psw_title">创建密码</string>
    <string name="lib_droi_account_new_password_hint">新密码</string>
    <string name="lib_droi_account_confirm_password_hint">确认密码</string>
    <string name="lib_droi_account_psw_rule">密码长度为6-16个字符</string>
    <string name="lib_droi_account_password_empty">密码不能为空</string>
    <string name="lib_droi_account_login_fail">登录失败</string>
    <string name="lib_droi_account_login_success">登录成功</string>
    <string name="lib_droi_account_welcome_register">注册</string>
    <string name="lib_droi_account_welcome_login_exit">使用已有帐号登录</string>
    <string name="lib_droi_account_welcome_qq_login">腾讯QQ登录</string>
    <string name="lib_droi_account_welcome_weibo_login">新浪微博登录</string>
    <string name="lib_droi_account_find_code_title">找回密码</string>
    <string name="lib_droi_account_find_code_phone_hint">请输入手机号码</string>
    <string name="lib_droi_account_find_code_email_hint">请输入邮箱</string>
    <string name="lib_droi_account_find_code_hint">请输入手机号码/邮箱</string>
    <string name="lib_droi_account_tip_reset_password_failed">重置失败，请重试</string>
    <string name="lib_droi_account_send_email">邮件已发送</string>
    <string name="lib_droi_account_send_email_title">激活邮件已发送</string>
    <string name="lib_droi_account_reset_pwd_by_email_title">重置邮件已发送</string>
    <string name="lib_droi_account_email_sened_text">邮件已发送至</string>
    <string name="lib_droi_account_resend_email">重新发送</string>
    <string name="lib_droi_account_dialog_man">男</string>
    <string name="lib_droi_account_dialog_woman">女</string>
    <string name="lib_droi_account_dialog_secret">保密</string>
    <string name="lib_droi_account_dialog_cancel">取消</string>
    <string name="lib_droi_account_dialog_ok">确定</string>
    <string name="lib_droi_account_dialog_input_newnick_name">请输入新昵称</string>
    <string name="lib_droi_account_gender_dialog_title">选择性别</string>
    <string name="lib_droi_account_nickname_dialog_title">修改昵称</string>
    <string name="lib_droi_account_active_encounter_problem">激活有问题?</string>
    <string name="lib_droi_account_modify_active_email">修改邮箱</string>
    <string name="lib_droi_account_active_time_hint">请在48小时内激活</string>
    <string name="lib_droi_account_useframe_title">使用系统账号登录</string>
    <string name="lib_droi_account_useframe_message">检测到您正在使用卓易账号%1$s,是否使用此账号登录?</string>
    <string name="lib_droi_account_useframe_change">换个账号</string>
    <string name="lib_droi_account_useframe_useframe">确认使用</string>
</resources>