<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="247.5dp"
    android:layout_height="wrap_content"
    android:background="@drawable/zy_loginout_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13.5dp"
        android:gravity="center_horizontal"
        android:text="@string/zy_loginout_title"
        android:textColor="#7c7c7c"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/zy_loginout_content"
        android:textColor="#969696"
        android:textSize="13.5sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16.5dp"
        android:background="#ebebeb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43.5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/zy_btn_loginout_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zy_loginout_cancel"
            android:textColor="#a5a5a5"
            android:textSize="16.5sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ebebeb" />

        <TextView
            android:id="@+id/zy_btn_loginout_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zy_loginout_out"
            android:textColor="#45c662"
            android:textSize="16.5sp" />
    </LinearLayout>

</LinearLayout>