<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lib_droi_account_dialog_center_btn_normal"
    android:minHeight="64dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/lib_droi_account_useframe_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lib_droi_account_useframe_message_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/lib_droi_account_useframe_message"
        android:textColor="@color/lib_droi_account_color_light_grey"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lib_droi_account_dialog_changebtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/lib_droi_account_dialog_btn_bottomleft"
            android:gravity="center"
            android:text="@string/lib_droi_account_useframe_change"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lib_droi_account_dialog_usebtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/lib_droi_account_dialog_btn_bottomright"
            android:gravity="center"
            android:text="@string/lib_droi_account_useframe_useframe"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>