<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lib_droi_account_layout_background"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/lib_droi_account_land_titleBackground"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/title_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/lib_droi_account_land_title_marginleft"
                android:background="@drawable/lib_droi_account_back_arrow"
                android:onClick="onBack" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/title_imageview"
                android:text="@string/lib_droi_account_send_email"
                android:textColor="@color/lib_droi_account_land_titleColor"
                android:textSize="@dimen/lib_droi_account_land_title_textSize" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/lib_droi_account_global_margin_left"
            android:layout_marginRight="@dimen/lib_droi_account_global_margin_right"
            android:layout_marginTop="@dimen/lib_droi_account_global_margin_top"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/lib_droi_account_email_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/lib_droi_account_email_sened_text" />

            <TextView
                android:id="@+id/lib_droi_account_tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/lib_droi_account_active_time_hint" />

            <Button
                android:id="@+id/lib_droi_account_btn_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="70dp"
                android:background="@drawable/lib_droi_account_register_button_selector"
                android:text="@string/lib_droi_account_resend_email"
                android:textColor="#29bd68" />

            <Button
                android:id="@+id/lib_droi_account_btn_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/lib_droi_account_button_selector"
                android:text="@string/lib_droi_account_finish"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:id="@+id/lib_droi_account_modify_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lib_droi_account_active_encounter_problem"
                    android:textColor="#7a7e83" />

                <TextView
                    android:id="@+id/lib_droi_account_modify_my_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:text="@string/lib_droi_account_modify_active_email"
                    android:textColor="@drawable/lib_droi_account_text_view_selector" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>